# solder-reflow

./: .gitmodules  LICENSE  README.md
docs/: Sudi-pic1.jfif
firmware/: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  compile_commands.json1  reference.c  sdkconfig  sdkconfig.old
firmware/components/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h  ssd1306_i2c_legacy.c
firmware/components/ssd1306/src/: i2c.cpp  ssd1306.h
firmware/lvgl/: .gdb_history  .gitignore  CMakeLists.txt  compile_commands.json  lv_conf.h  main.c  main.cpp
firmware/lvgl/component/: mainWindow.c  mainWindow.h
firmware/main/: CMakeLists.txt  hello_world_main.c  main.c  main.cpp
firmware/main/src/: Drawing.cpp  Drawing.h  Encoder.cpp  Encoder.h  EspRotary.h  ListMenuItem.cpp  MenuItem.cpp  MenuItem.h  PT100.cpp  PT100.h  PidController.cpp  RotaryEncoder.cpp  RotaryEncoder.h  SimpleControl.cpp  SimpleControl.h  util.cpp  util.h
firmware/v1/: CMakeLists.txt  reference.c  sdkconfig.old
firmware/v1/components/lcdgfx/: CMakeLists.txt  README.md
firmware/v1/components/lcdgfx/examples/direct_draw/draw_text/: draw_text.ino
firmware/v1/components/lcdgfx/examples/nano_engine/nano_engine/: README.md
firmware/v1/components/lcdgfx/src/: README.md  doxygen.cfg  nano_engine_v2.h
firmware/v1/components/lcdgfx/src/lcd_hal/avr/: spi_avr.cpp
firmware/v1/components/lcdgfx/src/v2/lcd/base/: display.h
firmware/v1/components/lcdgfx/src/v2/nano_engine/: README.md
firmware/v1/components/lcdgfx/unittest/: ssd1306_tests.cpp
firmware/v1/main/src/: Encoder.cpp  EspRotary.cpp  ListMenuItem.cpp  ListMenuItem.h  PidController.h  SimpleControl.h  util.cpp
firmware/v2/: .clang-format  .clangd  .gdbinit  .gitignore  CMakeLists.txt  README.md  flashing.yml  gdbinit  sdkconfig  sdkconfig.old
firmware/v2/control/: __main__.py  pyproject.toml
firmware/v2/control/src/control/: __init__.py
firmware/v2/fsm/: .gitignore  CMakeLists.txt
firmware/v2/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/v2/main/control/: MainControl.cpp  PID.h  TestHeater.h  TestSSRWithPWM.h
firmware/v2/main/device/: ADCDevice.h  Device.h  GPIODevice.h  MainTempSensor.cpp  MainTempSensor.h  PT100.h  Pinout.h
firmware/v2/main/display/: MainDisplay.cpp
firmware/v2/main/fsm/: SimpleFSM.cpp  SimpleFSM.h  State.cpp  State.h  Transitions.cpp  Transitions.h
firmware/v2/main/rtos/: README.md  adcQueue.h  binarySemaphores.h  inputEncoderFromForum.h  lvglGui.h  lvglGuiNative.h  lvglGuiPort.h  lvglGuiPort.txt  taskNotification.h  taskNotification2.h
firmware/v2/sampledData/: 11-03-1048_4096-over-16_2MHZ  11-03-1048_4096-over-20_2MHZ  11-03-1048_4096-over-2_2MHZ  11-03-1048_4096-over-4_2MHZ  11-03-1048_4096-over-6_2MHZ  dataa2.csv
hardware/board/: fp-info-cache  matchedBiasTransistorSim.kicad_sch  solder-reflow.csv  solder-reflow.kicad_pcb  solder-reflow.kicad_prl  solder-reflow.kicad_pro  solder-reflow.kicad_sch  solder-reflow.xml  sym-lib-table  ~solder-reflow.kicad_pcb.lck
hardware/board/downloadedLibrary/: 1.54 TFT IPS - 12P - Flat Flush Mount.stp  1.54 TFT IPS - 12P - Flat Mount.stp  1.54 TFT IPS - 22P - Flat Mount - With Glass.stp  1.54 TFT IPS - 22P - Reverse Mount - With Glass.stp  1.54 TFT IPS - Glass.stp  1.54 TFT IPS - No Cable.stp  1.54 TFT IPS - Reverse Mount.stp  USB-B-S-F-B-TH.stp
(+90 files in other folders)
