[project]
name = "control"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ahsanu", email = "caasperahsanuamala5@gmail.com"},
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
